# homework21.2

./: .gitignore  catalogue_page.html  category_page.html  contacts_page.html  main.py  main_page.html  pyproject.toml
