[tool.poetry]
name = "homework21-2"
version = "0.1.0"
description = ""
authors = ["Nagaeva Elina <05batman@mail.ru>"]
readme = "README.md"
packages = [{include = "homework21"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
